# lsd

./: pyproject.toml  setup.py
.github/workflows/: publish.yaml
lsd/: __init__.py
lsd/gp/: add_local_shape_descriptor.py
tests/: test_components.py  test_synthetic.py
