[project]
name = "lsds"
version = "0.1.3"
description = "Local Shape Descriptors"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gunpowder>=1.4.0",
    "h5py>=3.13.0",
    "lsds",
    "numpy>=2.0.0",
    "requests>=2.32.3",
    "scikit-image>=0.25.2",
    "scipy>=1.15.2",
]
authors = [{ name = 'Jan Funke', email = 'funkej@janelia.hhmi.org' }]

[project.optional-dependencies]
test = ["pytest>=8.3.5"]

[tool.uv.sources]
lsds = { workspace = true }
